2011-01-19  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* CMakeLists.txt: Create installation directory for
	openvas sysconf (usually /etc/openvas/)

2011-01-19  Matthew Mundell <matthew.mundell@greenbone.net>

	* CMakeLists.txt (CPACK_PACKAGE_VERSION_PATCH): Remove "0".
	(CPACK_PACKAGE_VERSION0): Remove ".".

	* misc/CMakeLists.txt: Set PATCH_VERS to "0" if the patch version is
	missing.

2011-01-18  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* nasl/nasl_icmp.h: Removed code path for not HAS_ICMP_ICMP_LIFETIME.

	* hg/hg_dns_axfr.c: Activated code path for HAVE_NETINET_IN_H.

	* misc/plugutils.c (sig_n): Activated code path for HAVE_SIGACTION,
	removed code path for not HAVE_SIGACTION.

	* misc/proctitle.c: Activated code path for not HAVE_SETPROCTITLE.
	Activated code path for HAVE_VNSPRINTF.

	* misc/proctitle.h: Activated code path for not HAVE_SETPROCTITLE.

	* misc/share_fd.c: Activate code path for HAVE_SENDMSG, for HAVE_RECVMSG
	and for HAVE_CONTROL_IN_MSGHDR. Activate code for not
	HAVE_ACCRIGHTS_IN_MSGHDR.

	* misc/system.c: Activated code path for HAVE_MALLOC_H.

	* CMakeLists.txt: Added install directive for several directories.

2011-01-18  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* INSTALL: Updated to cmake build system and harmonized
	with other modules.

2011-01-18  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Resolving libvers.h.in.

	* include/, include/libvers.h.in: Removed.

	* misc/plugutils.c: Removed include of libvers.h.  Harmonized
	macros for VERSION and version elements with CMakeLists.txt.

	* misc/CMakeLists.txt: Add transfer of version makros.

	* COPYING: Updated.

2011-01-18  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* include/libopenvas.h: Removed. It was no code in there anyway.

	* COPYING: Updated.

2011-01-18  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Resolving config.h.

	* include/config.h.in: Removed.
